--- a/index.html
+++ b/index.html
@@ -182,16 +182,13 @@
 </template>
 <script>
   var fireballSize = 22;
-  var getFireballSpeed = function(left) {
-    if(left) {
-      return 5;
-    } else {
-      return 2;
-    }
-  };
-
   var wizardSpeed = 3;
   var wizardWidth = 70;
+
+  var getFireballSpeed = function(left) {
+     return left ? 5 : 2;
+  };
+
   var getWizardHeight = function(wizardWidth) {
     return 1.337 * wizardWidth;
   };
@@ -199,6 +196,7 @@
   var getWizardX = function(width) {
       return (width / 2) - wizardWidth;
   };
+
   var getWizardY = function(height) {
       return height / 2 - height / 3;
   };
