--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
   };
 </script>
 <script src="js/game.js"></script>
+<script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 
 </body>
 </html>
