#22 Учебный проект: pimp my mage

--- a/index.html
+++ b/index.html
@@ -205,9 +205,11 @@
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 <script src="js/utils.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
+<script src="js/form.js"></script>
 <script src="js/artefacts.js"></script>
 
 </body>
