--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
 <script src="js/game.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/backend.js"></script>
+<script src="js/debounce.js"></script>
+<script src="js/render-wizard.js"></script>
+<script src="js/wizard.js"></script>
+<script src="js/similar-wizard.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
