--- a/index.html
+++ b/index.html
@@ -204,13 +204,12 @@
 </script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
-<script src="js/utils.js"></script>
+<script src="js/util.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/render-wizard.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/similar-wizard.js"></script>
-<script src="js/colorize.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/form.js"></script>
